explorer/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ferminux
  labels:
    app.kubernetes.io/part-of: ferminux-network
